Removed XML in favor of Anko Layouts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvp.view.PopularMoviesActivity">
+    tools:context=".ui.movies.PopularMoviesActivity">
 
     <ScrollView
             android:id="@+id/mainScrollView"
@@ -20,13 +20,12 @@
                 android:orientation="vertical">
 
             <TextView
-                    android:id="@+id/mainText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hello World!"
-                    android:layout_gravity="center"/>
+                android:id="@+id/mainText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello World!"
+                android:layout_gravity="center"/>
         </LinearLayout>
-
 
     </ScrollView>
 
