--- a/movie/src/main/res/layout/activity_main.xml
+++ b/movie/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/mainText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.movieData}"
+                    android:text="@{viewModel.popularMovies}"
                     android:paddingBottom="55dp" />
         </ScrollView>
 
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:text="Fetch Popular movies"
-                android:onClick="@{() -> viewModel.getPopularMovies(autoDisposable)}"
+                android:onClick="@{() -> viewModel.fetchMovieData}"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
